# netutils

./: .bandit.yml  .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pydocstyle.ini  .readthedocs.yml  .travis.yml  .yamllint.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  development_scripts.py  example.invoke.yml  getters.txt  mkdocs.yml  oui_postprocessing.py  oui_postprocessing.ts  postprocess.py  postprocess.ts  postprocessing.py  pyproject.toml  tasks.py  towncrier_template.j2
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  flat.yml  oui_filepull.yml  proto_filepull.yml  proto_num_filepull.yml  release.yml
backup/: file.txt
changes/: +class.deprecated  +drift-cb8b5e.housekeeping  +fix-flatbot.housekeeping  +invoke.housekeeping  +jlk-more-fixes-sadface.housekeeping  +jlk-more-python.housekeeping  +main.housekeeping  .gitignore  596.added  675.housekeeping  683.added  692.added  723.fixed  741.fixed  744.fixed  745.fixed  747.added  748.added  750.fixed  752.added  765.added  775.fixed  778.added  780.fixed  793.added  795.fixed  803.fixed  810.housekeeping
docs/: generate_code_reference_pages.py  requirements.txt
docs/admin/: install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: index.md  version_0.1.md  version_0.2.md  version_1.0.md  version_1.1.md  version_1.10.md  version_1.11.md  version_1.12.md  version_1.13.md  version_1.14.md  version_1.15.md  version_1.16.md  version_1.17.md  version_1.2.md  version_1.3.md  version_1.4.md  version_1.5.md  version_1.6.md  version_1.7.md  version_1.8.1.md  version_1.8.md  version_1.9.md
docs/assets/: acl-workflow.drawio
docs/assets/overrides/partials/: copyright.html
docs/dev/: arch_decision.md  attribution.md  contributing.md  dev_adr.md  dev_config.md  dev_environment.md  extending.md  include_parser_list.md  release_checklist.md
docs/dev/classy/: parser.md
docs/dev/code_reference/: acl.md  bandwidth.md  banner.md  configs.md  dns.md  hash.md  hostname.md  index.md  interface.md  ip.md  lib_helpers.md  lib_mapping.md  mac.md  nist.md  os_version.md  password.md  ping.md  platform_mapper.md  protocol_mapper.md  regex.md  route.md  time.md  utils.md  vlan.md
docs/source/: conf.py  index.rst  table_template.j2
docs/source/_static/: schema-page.css
docs/source/attribution/: index.rst
docs/source/contributing/: index.rst
docs/source/examples/: index.rst
docs/source/installation/: index.rst
docs/source/netutils/: index.rst
docs/source/netutils/asn/: index.rst
docs/source/netutils/bandwidth/: index.rst
docs/source/netutils/banner/: index.rst
docs/source/netutils/configs/: index.rst
docs/source/netutils/dns/: index.rst
docs/source/netutils/interface/: index.rst
docs/source/netutils/ip/: index.rst
docs/source/netutils/junos/: index.rst
docs/source/overview/: index.rst
docs/source/sphinxext/: exec.py
docs/user/: faq.md  include_jinja_list.md  lib_getting_started.md  lib_overview.md  lib_upgrade_paths.md  lib_use_cases.md  lib_use_cases_acl.md  lib_use_cases_jinja_filters.md  lib_use_cases_lib_mapper.md  lib_use_cases_nist.md  lib_use_cases_os_version.md  lib_use_cases_platform_mapper.md  lib_use_cases_protocol_mappers.md
docs/user/hier_config/: advanced-topics.md  experimental-features.md  getting-started.md  index.md
docs/user/lib_mapper/: aerleon.md  aerleon_reverse.md  ansible.md  ansible_reverse.md  capirca.md  capirca_reverse.md  dna_center.md  dna_center_reverse.md  forwardnetworks.md  forwardnetworks_reverse.md  hierconfig.md  hierconfig_reverse.md  librenms.md  librenms_reverse.md  napalm.md  napalm_reverse.md  ncclient.md  ncclient_reverse.md  netmiko.md  netmiko_reverse.md  netutilsparser.md  netutilsparser_reverse.md  nist.md  nist_reverse.md  nist_supported.md  ntctemplates.md  ntctemplates_reverse.md  pyats.md  pyats_reverse.md  pyntc.md  pyntc_reverse.md  running_config.md  scrapli.md  scrapli_reverse.md
flat_postprocess/: oui_postprocess.py  oui_postprocess.ts  protocol_number_postprocess.py  protocol_number_postprocess.ts  protocol_postprocess.py  protocol_postprocess.ts
netutils/: __init__.py  acl.py  api.py  asn.py  bandwidth.py  banner.py  cli.py  constants.py  dns.py  hash.py  hostname.py  interface.py  ip.py  junos.py  lib_helpers.py  lib_mapper.py  log.py  mac.py  nist.py  os_version.py  os_version_parser.py  oui_mappings.json  oui_mappings.py  password.py  ping.py  platform_mapper.py  port_mapper.py  protocol_mapper.py  protocols.json  regex.py  route.py  running_config.py  time.py  utils.py  variables.py  vlan.py
netutils/_private/: version.py
netutils/config/: __init__.py  clean.py  compliance.py  conversion.py  parser.py  utils.py
netutils/data_files/: __init__.py  oui_mappings.py  protocol_mappings.py  protocol_number_mappings.py
netutils/hier_config/: __init__.py  base.py  child.py  exceptions.py  host.py  options.py  root.py  text_match.py
netutils/protocol_mapper/: __init__.py  dccp.py  ip.py  protocols.py  sctp.py  tcp.py  udp.py
tests/unit/: conftest.py  test_acl.py  test_asn.py  test_bandwidth.py  test_banner.py  test_basic.py  test_basics.py  test_cli.py  test_compliance.py  test_config_clean.py  test_conversion.py  test_deprecation.py  test_dns.py  test_docs.py  test_hash.py  test_hostname.py  test_interface.py  test_ip.py  test_junos.py  test_lib_helpers.py  test_lib_helpers_no_napalm.py  test_lib_helpers_no_optionals.py  test_lib_helpers_optionals.py  test_lib_mapper.py  test_logging.py  test_mac.py  test_nist.py  test_os_versions.py  test_parser.py  test_password.py  test_password_optionals.py  test_ping.py  test_platform_mapper.py  test_port_mapper.py  test_private_version.py  test_protocol_mapper.py  test_regex.py  test_route.py  test_running_config.py  test_sanitize.py  (+4 more)
tests/unit/hier_config/: __init__.py  conftest.py  test_hier_config.py  test_hier_options.py  test_host.py  test_juniper_syntax.py  test_negate_with_undo.py  test_text_match.py  test_various.py
tests/unit/jinja2_template/: test.j2
(+514 files in other folders)
